--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript-eslint": "^8.54.0",
     "vite": "npm:rolldown-vite@7.2.5"
